test/negative/t24.mli.expected

*******************************
********** Parsed file ********
*******************************
val f : ('a -> 'b -> 'c) -> 'a -> 'b -> 'c[@@gospel {| r = f x y z w |}]

*******************************
****** GOSPEL translation *****
*******************************
(*@ open Stdlib *)

(*@ open Gospelstdlib *)

val f : ('a -> 'b -> 'c) -> 'a -> 'b -> 'c
(*@ r = f x y z w
     *)
File "t24.mli", line 12, characters 13-14:
Error: Type checking error: parameter do not match with val type.
